# gdiff

./: gdiff.cabal
src/Data/Generic/: Diff.hs
src/Data/Generic/Diff/: Effectful.hs
