Name:                gdiff
Version:             1.2
Category:            Data
License:             BSD3
License-File:        LICENSE
Author:              Eelco Lempsink, Andres Löh, Gabor Greif
Maintainer:          eelco at lempsink nl
Synopsis:            Generic diff and patch

Description:
  Get an efficient, optimal, type-safe diff and patch function for your
  datatypes of choice by defining a simple GADT and some class instances.
  .
  Extracted from Eelco Lempsink's Thesis (<http://eelco.lempsink.nl/thesis.pdf>).
  .
  /CHANGELOG/
  .
  1.2 (2014-XX-XX)
  .
  * Expose $Effectful$ module.
  .
  1.1 (2014-06-27)
  .
  * Use GHC-7.8's (:~:).
  .
  1.0.1 (XXXX-XX-XX)
  .
  * Fixed a typo in the documentation.
  .
  1.0 (2010-03-20)
  .
  * Initial release.

Cabal-Version:       >= 1.6
Build-Type:          Simple
Tested-With:         GHC == 7.8.3

Homepage:            https://github.com/eelco/gdiff
Bug-Reports:         https://github.com/eelco/gdiff/issues

Library
    Build-Depends:   base >= 4.7 && < 5
    Hs-Source-Dirs:  src
    Exposed-Modules: Data.Generic.Diff
                     Data.Generic.Diff.Effectful

Source-Repository head
    Type:     git
    Location: git://github.com/eelco/gdiff.git
